added extra reading section

--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
             <h2 class="mindset-dialog">Always keep a positive mindset</h2>
             <button class="btn-white">Call Now</button>
         </div>
+        <!-- extra sectioin -->
+        <section>
+            <div class="reading">
+                <H3>Reading attentively to cover all of the gaps</H3>
+                <img class="students" src="images/students.jpg" alt="students">
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex, perferendis reprehenderit temporibus beatae nihil consequuntur totam iure magnam illum sit neque, praesentium quia illo reiciendis eveniet libero veritatis. Commodi, veniam.</p>
+            </div>
+
+        </section>
         
     </main>
 
