--- a/index.html
+++ b/index.html
@@ -91,6 +91,9 @@
                 <p>There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words</p>
                 <p>Email : info@gmail.com</p>
                 <p>Phone : 01500 00 00 00</p>
+                <img src="images/icons/fb.png" alt="facebook">
+                <img src="images/icons/twitter.png" alt="twitter">
+                <img src="images/icons/youtube.png" alt="">
             </div>
             <div class="subscribe">
                 <h5>Subscribe</h5>
